完成like组件逻辑

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,2 +1,3 @@
 <!--pages/classic/classic.wxml-->
-<like />
+<like bind:like="onlike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
+<movie img="{{classic.image}}" content="{{classic.content}}"></movie>
