加入缓存逻辑

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -2,8 +2,8 @@
 <view class="container">
   <view class="header">
     <epsoide class="epsoide" index="{{classic.index}}" />
-    <like class="like" bind:like="onlike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
+    <like class="like" bind:like="onlike" like="{{likeStatus}}" count="{{likeCount}}" />
   </view>
-  <movie img="{{classic.image}}" content="{{classic.content}}"></movie>
+  <movie wx:if="{{false}}" img="{{classic.image}}" content="{{classic.content}}"></movie>
   <navi bind:next="onNext" bind:prev="onPrev" class="navi" title="{{classic.title}}" first="{{first}}" lastest="{{lastest}}" />
 </view>
