--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,2 +1,19 @@
 <!--pages/book-detail/book-detail.wxml-->
-<text>pages/book-detail/book-detail.wxml</text>
+<view class="container">
+  <view class="head">
+    <image src="{{book.image}}"></image>
+    <text class="title">{{book.title}}</text>
+    <text class="author">{{book.author}}</text>
+  </view>
+  <view class="sub-container">
+    <text class="headline">短评</text>
+    <view class="comment-container">
+      <block wx:for="{{comments}}" wx:key="index" wx:index="index">
+        <tag tag-class="{{index === 0 ? 'ex-tag1' : '' || index === 1 ? 'ex-tag2' : ''}}" text="{{item.content}}">
+          <text class="num" slot="count">{{'+' + item.nums}}</text>
+        </tag>
+      </block>
+    </view>
+  </view>
+  
+</view>
