--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,4 +1,6 @@
 <!--pages/book-detail/book-detail.wxml-->
+<wxs src="../../util/filter.wxs" module="util" />
+
 <view class="container">
   <view class="head">
     <image src="{{book.image}}"></image>
@@ -8,12 +10,15 @@
   <view class="sub-container">
     <text class="headline">短评</text>
     <view class="comment-container">
-      <block wx:for="{{comments}}" wx:key="index" wx:index="index">
+      <block wx:for="{{util.limit(comments, 15)}}" wx:key="index" wx:index="index">
         <tag tag-class="{{index === 0 ? 'ex-tag1' : '' || index === 1 ? 'ex-tag2' : ''}}" text="{{item.content}}">
           <text class="num" slot="count">{{'+' + item.nums}}</text>
         </tag>
       </block>
     </view>
   </view>
-  
+  <view class="sub-container">
+    <text class="headline">内容简介</text>
+    <text class="content" decode="{{true}}">{{ util.format(book.summary) }}</text>
+  </view>
 </view>
