--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,5 +1,5 @@
 <!--components/tag/index.wxml-->
-<view class="container tag-class">
+<view bindtap="onTapTag" class="container tag-class">
   <text>{{text}}</text>
   <slot name="count"></slot>
 </view>
