--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -16,4 +16,6 @@
     </view>
 </view>
 
+<search bind:cancel="onCancel" wx:if="{{searching}}" />
+
 <!-- <v-search more="{{more}}" bind:cancel="onCancel" wx:if="{{searching}}" /> -->
