完成热门搜索

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -13,17 +13,22 @@
       <view class="title">
         <view class="chunk"></view>
         <text>历史搜索</text>
-        <view class="tags">
-          <block wx:for="{{historyWords}}">
-            <tag text="{{item}}" />
-          </block>
-        </view>
+      </view>
+      <view class="tags">
+        <block wx:for="{{historyKeywords}}">
+          <tag text="{{item}}" />
+        </block>
       </view>
     </view>
     <view class="history hot-search">
       <view class="title">
         <view class="chunk"></view>
         <text>热门搜索</text>
+      </view>
+      <view class="tags">
+        <block wx:for="{{hotKeywords}}">
+          <tag text="{{item}}" />
+        </block>
       </view>
     </view>
   </view>
