--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -33,8 +33,11 @@
     </view>
   </view>
   <view wx:if="{{searching}}" class="books-container">
-    <block wx:for="{{books}}" wx:key="{{item.id}}">
-      <book book="{{item}}" class="book" />
+    <block wx:for="{{datas}}" wx:key="{{item.id}}">
+      <book showLike="{{false}}" book="{{item}}" class="book" />
     </block>
   </view>
+  <loading class="loading-center" wx:if="{{pageLoading}}" />
+  <loading class="loading" wx:if="{{loading}}" />
+  <text class="empty-tip" wx:if="{{noneResult}}">没有搜索到书籍</text>
 </view>
